--- a/gui.glade
+++ b/gui.glade
@@ -31,7 +31,7 @@
             <property name="height-request">80</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="label" translatable="yes">Media name:</property>
+            <property name="label" translatable="yes">No media loaded</property>
           </object>
           <packing>
             <property name="x">51</property>
