--- a/gui.glade
+++ b/gui.glade
@@ -2,6 +2,14 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
+  <object class="GtkFileFilter" id="filefilter1">
+    <mime-types>
+      <mime-type>music/ *</mime-type>
+    </mime-types>
+    <patterns>
+      <pattern>*.mp3</pattern>
+    </patterns>
+  </object>
   <object class="GtkWindow" id="window">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Basic Media Player</property>
@@ -96,6 +104,7 @@
             <property name="height-request">80</property>
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="filter">filefilter1</property>
             <property name="title" translatable="yes">Choose</property>
             <signal name="file-set" handler="on_btnFileChooser_file_set" swapped="no"/>
             <signal name="selection-changed" handler="on_btnFileChooser_selection_changed" swapped="no"/>
